[package]
name = "rust-dagre"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.12"
rayon = "1.11"
parking_lot = "0.12"
ahash = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = "1.3"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
