[package]
name = "rust-dagre"
version = "0.1.0"
edition = "2021"
authors = ["Libnare"]
description = "A directed graph layout library for Rust and WebAssembly"
license = "MIT"
repository = "https://github.com/libnare/rust-dagre"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-threads", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.12"
rayon = "1.11"
parking_lot = "0.12"
ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { version = "1.3", optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys", "serde-wasm-bindgen", "wasm-bindgen-rayon"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.release.package."*"]
opt-level = 3
