[package]
name = "rust-dagre"
version = "0.1.0"
edition = "2021"
authors = ["Libnare"]
description = "A directed graph layout library for Rust, Node.js, and WebAssembly"
license = "MIT"
repository = "https://github.com/libnare/rust-dagre"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.12"
rayon = "1.11"
parking_lot = "0.12"
ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }

# NAPI dependencies
napi = { version = "3.5", default-features = false, features = ["napi4", "serde-json", "compat-mode", "async"] }
napi-derive = "3.3"

[build-dependencies]
napi-build = "2.3"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
